Added Welcome Activity, and fb session null msg

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="title_activity_login">LoginActivity</string>
     <string name="color_dialog_title">Pick Theme</string>
     <string name="title_activity_li">LIActivity</string>
+    <string name="title_activity_welcome">WelcomeActivity</string>
 
 </resources>
