ADDED: Ads..MONEY!

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -29,5 +29,6 @@
         \n\nYou will be asked to accept permissions, allowing us to present you with all
         the information you need to keep in touch with your friends.\n\nNo personal information
         is collected or stored by Contakts.</string>
+    <string name="admob_id">a152f39c37b61f7</string>
         
 </resources>
