--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,7 +21,7 @@
          picking a theme of your choice!</string>
     <string name="welcomeInfo">Contakts is a beautiful new way to connect with
          everyone that matters to you.\n\nSimply swipe right anywhere on the screen
-          to open the navigation menu and start connecting with everyone!</string>
+          to slide out the navigation menu and start connecting with everyone!</string>
     <string name="fbInfo">Contakts allows you to connect with your Facebook friends
         easily. Just login to you Facebook account, by tapping on the button below.
         \n\nYou will be asked to accept permissions, allowing us to present you with all
