--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,9 +22,7 @@
     <string name="welcomeInfo">Contakts is a beautiful new way to connect with
          everyone that matters to you.\n\nSimply swipe right anywhere on the screen
           to slide out the navigation menu and start connecting with everyone!</string>
-    <string name="fbInfo">Contakts allows you to connect with your Facebook friends
-        easily. Just login to you Facebook account, by tapping on the button below.
-        \n\nYou will be asked to accept permissions, allowing us to present you with all
+    <string name="fbInfo">Upon Login, you will be asked to accept permissions, allowing us to present you with all
         the information you need to keep in touch with your friends.\n\nNo personal information
         is collected or stored by Contakts.</string>
     <string name="admob_id">a152f39c37b61f7</string>
