--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -105,7 +105,7 @@
     <!-- END OF FREQ ACTIVITY -->
 
     <string name="friendDialogHeader">Friend Details</string>
-    <string name="friendDialogText">Here you can see all data associated with a Facebook friend. Simply tap on any item and learn more about it.</string>
+    <string name="friendDialogText">Here you can see all data associated with a Facebook friend. Simply tap on any item and learn more about it. If there is contact information (phone numbers and email) associated with a friend, it will show up here.</string>
     <string name="wish">Wish</string>
     <string name="happyBday">a Happy Birthday!</string>
     <string name="usesContakts">uses Contakts</string>
