--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -176,6 +176,9 @@
 	<string name="emptyFavs">Usted no tiene contactos favoritos. ¿Por qué no añadir un poco?</string>
 	<string name="emptyFavsInfo">Deslice hacia la derecha en la pantalla para abrir el menú</string>
 	
+	<!-- DIALER -->
+	<string name="call">Teléfono</string>
+    <string name="clear">Borrar</string>
 	
 	
 </resources>
